# gamer-coffee-table-cpp

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  cmake_install.cmake  compile_commands.json  main.cpp  main.mm  main_esp32.cpp  sdkconfig  sdkconfig.default
.cache/clangd/index/: actor.cpp.58DDDDDDDE4F3628.idx  actor.hpp.4B8A9CDF04454459.idx  arrow_actor.cpp.5CCD04E0E374CC8F.idx  arrow_actor.hpp.DDAC9AACEBE9D25D.idx  border_actor.cpp.BA369EED7330EF61.idx  border_actor.hpp.97BFE955AE9B54D5.idx  bullet_actor.cpp.9F89CC5E86B7C965.idx  bullet_actor.hpp.2CE8A60E3B5B4C2A.idx  button_icon_actor.hpp.65C7835C6223990D.idx  color.hpp.CE70F61246B8C0B7.idx  controls_scene.cpp.822EC2FB9063B1F7.idx  controls_scene.hpp.A4E07B9DBDCB1C99.idx  engine.cpp.8CE275DFE9FAF0A9.idx  engine.hpp.B23A63B954DE330E.idx  esp32test_scene.cpp.EA4299728157C873.idx  esp32test_scene.hpp.2D4C8ABF6D5C1550.idx  garbage_bar_logic.hpp.19FD4B1734EC936F.idx  gestures.cpp.AEE18BF54CFBC667.idx  gestures.hpp.CEC48A8F6678FC6E.idx  grid2d.hpp.A6B025AED97CA684.idx  hold_logic.cpp.2D0B80A7ACDE0706.idx  hold_logic.hpp.859B926E74C2C34A.idx  input.cpp.7E7327FAFD4C3820.idx  input.hpp.F55DA2796EF3DB1D.idx  input_provider.hpp.2929E32B6B4774A9.idx  key.hpp.71CBD4824DE73B24.idx  key_state.hpp.82B5DE7921D2F595.idx  keyboard_input_provider.hpp.1A53174DC778B96C.idx  letter.cpp.82C270488793B2EB.idx  letter.hpp.0B3B06228C2853B5.idx  main_desktop.cpp.699EEE06B4C7CF64.idx  matrix.hpp.B83F39CA2DF45769.idx  max_heap.hpp.EC412F594CA7D158.idx  menu_scene.cpp.E941DB51D7C50B88.idx  menu_scene.hpp.787788ECF33BB19B.idx  now_ms.hpp.31C43ADE65D75FD0.idx  obstacle_actor.cpp.869CD9347F1452C5.idx  obstacle_actor.hpp.A633237F57A1442D.idx  obstacle_type.hpp.F68B5EF5FE8E7327.idx  pong_scene.cpp.6079FE6A12C4DDD1.idx  (+22 more)
.zed/: settings.json
desktop/: .gitignore  CMakeLists.txt  desktop_threading_provider.hpp  main_desktop.cpp
engine/: Actor.cpp  Actor.hpp  Color.hpp  Engine.cpp  Engine.hpp  Matrix.hpp  actor.hpp  color.hpp  engine.hpp  matrix.hpp  scene.hpp  v2.cpp  v2.h  v2.hpp
engine/Input/: Input.hpp  InputProvider.hpp  Key.hpp  KeyState.hpp  KeyboardInputProvider.hpp
engine/actors/: rectangle-actor.hpp
engine/input/: input.hpp  input_provider.hpp  key.hpp  keyboard_input_provider.hpp
engine/scenes/menu/: menu-scene.hpp
esp32/: .gitignore  CMakeLists.txt  compile_commands.json  sdkconfig
esp32/components/hub75/: CMakeLists.txt
esp32/main/: CMakeLists.txt  esp32_input_provider.hpp  esp32_threading_provider.hpp  main_esp32.cpp  table_input_provider.cpp  table_input_provider.hpp
src/: actor.cpp  actor.hpp  color.hpp  engine.cpp  engine.hpp  grid2d.hpp  matrix.hpp  max_heap.hpp  now_ms.hpp  scene.hpp  threading_provider.hpp  v2.hpp
src/actors/: arrow-actor.hpp  arrow_actor.cpp  arrow_actor.hpp  border_actor.cpp  border_actor.hpp  letter.cpp  letter.hpp  rectangle-actor.cpp  rectangle_actor.cpp  rectangle_actor.hpp  text_actor.cpp  text_actor.hpp
src/coroutine/: task.hpp  wait_for_ms.hpp
src/input/: gestures.cpp  gestures.hpp  input.cpp  input.hpp  input_provider.hpp  key.hpp  key_state.hpp  keyboard_input_provider.hpp  table_input_provider.cpp  table_input_provider.hpp
src/scenes/controls/: button_icon_actor.hpp  controls_scene.cpp  controls_scene.hpp
src/scenes/esp32test/: esp32test_scene.cpp  esp32test_scene.hpp  test_actor.cpp
src/scenes/menu/: menu-scene.cpp  menu-scene.hpp  menu_scene.cpp  menu_scene.hpp
src/scenes/pong/: pong_scene.cpp  pong_scene.hpp
src/scenes/snake/: snake_scene.cpp  snake_scene.h
src/scenes/tanks/: bullet.cpp  bullet.hpp  bullet_actor.cpp  bullet_actor.hpp  obstacle_actor.cpp  obstacle_actor.hpp  obstacle_type.hpp  tank_actor.cpp  tank_actor.hpp  tanks_scene.cpp  tanks_scene.hpp  todos.txt
src/scenes/tetris/: garbage_bar_logic.hpp  hold_logic.cpp  hold_logic.hpp  tetris_block.hpp  tetris_block_colors.cpp  tetris_board_actor.cpp  tetris_board_actor.h  tetris_scene.cpp  tetris_scene.hpp  tetris_shape.cpp  tetris_shape.hpp
